Illegal access profile should no longer be required